[package]
name = "rmcp-postgres"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Manson"]
description = "PostgreSQL MCP server built with rmcp - query, insert, update, delete, and schema inspection tools"
license = "MIT"
repository = "https://github.com/sqrew/rmcp-postgres"
keywords = ["mcp", "postgres", "database", "rmcp", "server"]
categories = ["database", "command-line-utilities"]

[lib]
name = "rmcp_postgres"
path = "src/lib.rs"

[[bin]]
name = "rmcp-postgres"
path = "src/main.rs"

[dependencies]
# MCP framework
rmcp = { version = "0.12.0", features = ["server"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
tokio-postgres = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
async-trait = "0.1"
